frontend/test/should_pass/hom_ret_001.grg
dpo rule r:(Node) {
	pattern {
		x: Node;
		y: Node;
		hom(x, y);
	}
	replace {
		x;
		return(x);
	}
}